July 19 2022 Update:

- Added code to resize the PowerShell console. If the PowerShell console buffer size / window size was too small, the output from many of the commands would be truncated to the point that the information would not be useful.
- Reworked the way registry values are exported. Now uses 'reg.exe export <path\to\reg\hive>' as it gives better output and is more useful.
- Included export of 32-bit Veeam registry values (HKLM\SOFTWARE\WOW6432Node\Veeam)

February 27 2024 Update:
- Overhaul of event viewer log export to CSV code to drastically speed up overall execution time.
- Removed forced resizing of console and instead modified the default Out-File width.
- Removed copy of %ProgramData%\Veeam\Backup if the script was executed on the VBR server as this could potentially be a massive folder.
- Added extensionless file to exported zip archive letting the engineer know if this script was ran on the VBR server as this is not the typical use case.
- Redirected various output to null that wasn't intended to be sent to console.